# FactCG

./: LICENSE  README.md  benchmark.py  benchmark.sh  public_test.py  public_test.sh  pyproject.toml  requirements.txt  train.py  train.sh  wice_connected_reasoning.py
data/: musique.py
data/training_stage1/: CG2C_musique_minhop3_rbt_mnli_failed.json
data/training_stage2/: CG2C_doc.json
factcg/: __init__.py  dataloader.py  factcg_score.py  grounding_model.py  grounding_score.py  inference.py  save_hf_ckpt.py  utils.py
logs/ckpt_factcg_dbt_stage1/version_0/: events.out.tfevents.1738198017.BizQA08.72806.0
logs/ckpt_factcg_dbt_stage1/version_1/: events.out.tfevents.1738198147.BizQA08.74291.0  hparams.yaml
logs/ckpt_factcg_dbt_stage1/version_2/: events.out.tfevents.1738199713.BizQA08.77572.0
prompts/: claim_generation_from_graph.yaml  claim_sub_graph_extraction.yaml  content_graph_extraction_for_Doc.yaml  content_graph_extraction_for_MHQA.yaml  doc_relation_removal.yaml  qa_to_claim.yaml
