[project]
name = "factcg"
version = "0.1.0"
authors = [
  { name="Deren Lei", email="derenlei97@gmail.com" },
  { name="Yaxi Li", email="yaxili96@gmail.com" },
  { name="Siyao Li", email="siyaolisiyao@gmail.com" },
]
description = "FactCG: Enhancing Fact Checkers with Graph-Based Multi-Hop Data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: Apache Software License',
    "Operating System :: OS Independent",
]

dependencies = [
    "nltk",
    "pandas",
    "numpy",
    "torch==2.2.1",
    "transformers",
    "pytorch_lightning>=2.2.0",
    "datasets",
    "openai",
    "scikit-learn",
    "sentencepiece",
    "protobuf"
]

[tool.setuptools]
packages = ["factcg"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/derenlei/FactCG"
Issues = "https://github.com/derenlei/FactCG/issues"